Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

17-Oct-2009 Hannes Papenberg
# Fixed some bugs with the menu manager and modal windows
+ Added Article linker plugin for editors
^ Merged editor windows for article editing

16-Oct-2009 Ron Severdia
^ Extension Manager fixes
^ Language fixes
+ New warning CSS

15-Oct-2009 Ron Severdia
# BlueStork UI fixes
^ Replace tables
+ Language fixes

15-Oct-2009 Hannes Papenberg
# Fixed saving in com_modules

14-Oct-2009 Elin Waring
# Fix link creation when the layout is not called default. 
# Update/add access code for weblinks and contacts.  Fix typos.
# Correct errors in sample data. Correct errors in joomla.sql (add s to user), add xml for com_users front end.
# Add required="true" to required elements.
^ Add modal linked user picker for com_contact. Clean up contact picker modal.

13-Oct-2009 Ron Severdia
# CSS and UI fixes for JForm radio button changes.
# UI fixes with new JForm class

14-Oct-2009 Andrew Eddie
+ Added languages to base install data.
! Consistency updates to backend Newsfeeds component.
+ Added access and language fields to newsfeeds table.
^ Refactored schema of newsfeeds table.
^ Rolled tight coupling of asset name out of JControllerForm.
+ Added checkout and checkin base methods to JModelForm (compliments JControllerForm).
! Consistency updates to backend Content component.
# Added missing support for saveorder in articles list. 

13-Oct-2009 Andrew Eddie
^ Reverse the order of Publisher, Editor and Author groups to match admin groups direction.
^ Change label of 'inherit' in Global Config permissions.
+ Add access check to categories form field.
^ Configure add and edit access controls in com_content (changes to access checks in JControllerForm, article controller and model).
# Fix bug in JTable::delete when tracking assets.