@@ -105,7 +105,7 @@ class NewsfeedsModelCategory extends JModelList
 		// Select required fields from the categories.
 		$query->select($this->getState('list.select', 'a.*'));
 		$query->from('`#__newsfeeds` AS a');
-		//$query->where('a.access IN ('.$groups.')');
+		$query->where('a.access IN ('.$groups.')');
 
 		// Filter by category.
 		if ($categoryId = $this->getState('category.id'))
